--- a/jmx-war/pom.xml
+++ b/jmx-war/pom.xml
@@ -11,7 +11,7 @@
     <packaging>war</packaging>
     <dependencies>
         <dependency>
-            <groupId>net.gcolin.server.maven</groupId>
+            <groupId>net.gcolin.jmxconsole</groupId>
             <artifactId>jmx-web-console</artifactId>
         </dependency>
         <dependency>
