--- a/jmx-war/pom.xml
+++ b/jmx-war/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.gcolin.jmxconsole</groupId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
         <artifactId>jmx-web-console-parent</artifactId>
     </parent>
     <description>A war for jetty and tomcat</description>
