--- a/jmx-embedded/pom.xml
+++ b/jmx-embedded/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>net.gcolin.jmxconsole</groupId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1</version>
 		<artifactId>jmx-web-console-parent</artifactId>
 	</parent>
 	<description>An embeddable preconfigured Jetty server with a Jmx servlet.</description>
