--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.gcolin.jmxconsole</groupId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <artifactId>jmx-web-console-parent</artifactId>
     <name>${project.artifactId}</name>
     <packaging>pom</packaging>
@@ -42,7 +42,7 @@
         <connection>scm:git:git://github.com/gcolin/jmx-web-console.git</connection>
         <developerConnection>scm:git:git@github.com:gcolin/jmx-web-console.git</developerConnection>
         <url>http://github.com/gcolin/jmx-web-console</url>
-      <tag>jmx-web-console-parent-1.1</tag>
+      <tag>HEAD</tag>
   </scm>
     <dependencyManagement>
         <dependencies>
